# ageent_agora_bitothello

./: .gitignore  AGENTS.md  AI_DESIGN.md  ARCHITECT.md  MEMO.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  python-tests.yml
journal/: README.md
src/: board.py  cli.py  main.py  play_cli.py
src/othello/: ai.py  board.py  cli.py  game.py  gui.py  network.py
tests/: test_ai.py  test_board.py  test_board_extra.py  test_edge_cases.py  test_network.py  test_save_load.py  test_timer.py
